fix for incorrect row spacing

--- a/studio-finder/src/App.css
+++ b/studio-finder/src/App.css
@@ -61,7 +61,7 @@ ion-grid ion-row {
   margin-right: calc(-1 * var(--grid-spacing));
   padding-left: 0;
   padding-right: 0;
-  width: 100%;
+  width: calc(100% + (var(--grid-spacing) * 2));
 }
 ion-grid ion-row ion-col{
   padding-left: var(--grid-spacing);
